Thank You for Choosing to Learn from in28Minutes

--- a/azure/AZ-900.md
+++ b/azure/AZ-900.md
@@ -64,12 +64,12 @@ Susanth Sutheesh (https://www.youtube.com/AGuideToCloud), Eshant Garg (https://w
 ▬▬▬▬▬▬ Chapters ▬▬▬▬▬▬ 
 
 00:00:00 Introduction
-EDIT Is AZ-900 right approach to start learning cloud?
-EDIT Learning Areas of AZ-900 , Skills that you will be tested on in Exams.
-EDIT Learning Path one should follow for AZ-900 certification
-EDIT How to learn new concepts in Azure and be exam ready.
-EDIT Tips and Tricks for Exam.
-EDIT Closing
+00:01:00 Is AZ-900 right approach to start learning cloud?
+00:06:10 Learning Areas of AZ-900 , Skills that you will be tested on in Exams.
+00:16:27 Learning Path one should follow for AZ-900 certification
+00:24:43 How to learn new concepts in Azure and be exam ready.
+00:27:59 Tips and Tricks for Exam.
+00:37:03 Closing
 
 ```
 
