Thank You for Choosing to Learn from in28Minutes

--- a/azure/AZ-900.md
+++ b/azure/AZ-900.md
@@ -77,6 +77,10 @@ Susanth Sutheesh (https://www.youtube.com/AGuideToCloud), Eshant Garg (https://w
 
 ```
 Watch Susanth Sutheesh (https://www.linkedin.com/in/susanthsutheesh/), Eshant Garg(https://www.linkedin.com/in/eshantgarg/), Vinay Nair(https://www.linkedin.com/in/vinay-nair-278892145/) join me in this discussion in this discussion on AZ-900 - Azure Fundamentals Certification
+
+FULL DISCUSSION - https://youtu.be/yFJjQMjP2eI
+
+COMPLETE SERIES - https://github.com/in28minutes/learning-paths-cloud-and-devops#cloud-and-devops-learning-paths
  
 #azure #certification #paths #cloud #in28minutes #AzureFundamental
 
