--- a/azure/DP-900.md
+++ b/azure/DP-900.md
@@ -6,7 +6,10 @@
 ### Video Editing Guidelines
 
 - Video Editing needed
-	- VINAY TO ADD
+	- 10:03 - 10:23
+	- 30:50 - 30:53
+	- 31:28 - 31:33
+
 - Title: DP-900 Certification - Get started with Data in Azure
 - TOC:
 	- DP-900
@@ -19,10 +22,12 @@
 		- Free giveaway
 
 ### Image Overlays
-- VINAY TO ADD
+- None
 
 ### Text Overlays
-- VINAY TO ADD
+- 2:07 - ELT - Extract, Load ,Transform , ETL- Extract ,Transform, Load
+- 
+- 
 
 ### Video Description
 
@@ -35,15 +40,19 @@ Eshant Garg (https://www.youtube.com/c/eshantgarg), Vinay Nair(https://www.linke
 ► Is DP-900 , Azure Fundamental certification right way to start cloud journey?
 ► Who should do the DP-900 Certification?
 ► How to start preparing for DP-900? 
+► Datalake vs Datawarehouse
 ► What are the exam objectives?
 ► Exam - Tips and Tricks
+► Free Certification from Azure
 
 ▬▬▬▬▬▬ Learning Resources 🔗▬▬▬▬▬▬ 
 
 ► Susanth Website : https://www.aguidetocloud.com/
 ► Eshant Website : https://learncloud.info/
 ► Hands-ON exercise: https://github.com/MicrosoftLearning
-VINAY TO ADD
+► Course Details for DP-900:  https://docs.microsoft.com/en-us/learn/certifications/exams/dp-900
+► Schedule DP-900 Exam : https://docs.microsoft.com/en-us/learn/certifications/exams/dp-900#certification-exams
+► How to check eligibility for free certification : https://www.youtube.com/watch?v=4FCDkZEBkf8&t=100s
 
 ▬▬▬▬▬▬ Chapters ▬▬▬▬▬▬ 
 
@@ -54,7 +63,7 @@ VINAY TO ADD
 ### Social Media Post
 
 ```
-Watch Eshant Garg(https://www.linkedin.com/in/eshantgarg/), Vinay Nair(https://www.linkedin.com/in/vinay-nair-278892145/) join me in this discussion in this discussion on DP-900 - Azure Data Fundamentals Certification
+Watch Eshant Garg(https://www.linkedin.com/in/eshantgarg/), Vinay Nair(https://www.linkedin.com/in/vinay-nair-278892145/) join me in this discussion on DP-900 - Azure Data Fundamentals Certification
 
 FULL DISCUSSION - https://youtu.be/yFJjQMjP2eI
 
