--- a/azure/DP-900.md
+++ b/azure/DP-900.md
@@ -57,7 +57,11 @@ Eshant Garg (https://www.youtube.com/c/eshantgarg), Vinay Nair(https://www.linke
 ▬▬▬▬▬▬ Chapters ▬▬▬▬▬▬ 
 
 00:00:00 Introduction
-
+00:01:23 Who should do the DP-900 Certification?
+00:08:02 What are the exam objectives? 
+00:19:02 Datalake vs Datawarehouse
+00:23:21 How to start preparing for DP-900?
+00:25:49 Exam - Tips and Tricks
 ```
 
 ### Social Media Post
@@ -65,7 +69,7 @@ Eshant Garg (https://www.youtube.com/c/eshantgarg), Vinay Nair(https://www.linke
 ```
 Watch Eshant Garg(https://www.linkedin.com/in/eshantgarg/), Vinay Nair(https://www.linkedin.com/in/vinay-nair-278892145/) join me in this discussion on DP-900 - Azure Data Fundamentals Certification
 
-FULL DISCUSSION - https://youtu.be/yFJjQMjP2eI
+FULL DISCUSSION - https://youtu.be/2hYmMAcKy8g
 
 COMPLETE SERIES - https://www.youtube.com/watch?v=WSjaBnOWQ40&list=PLBBog2r6uMCQik02JO_68gqwZbqCrxdRZ
  
